--- a/build.gradle
+++ b/build.gradle
@@ -1,57 +1,60 @@
 buildscript {
-  repositories {
-    mavenCentral()
-  }
+    repositories {
+        mavenCentral()
+    }
 
-  dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.0'
-  }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.1'
+    }
 }
-
 apply plugin: 'com.android.application'
-
 dependencies {
-  compile project(':plugins:Android-PullToRefresh:library')
-  compile project(':plugins:ckChangeLog:library')
-  compile project(':plugins:HoloColorPicker')
-  compile project(':plugins:openpgp-api-library')
-  compile 'com.android.support:support-v13:19.1.0'
-  compile fileTree(dir: 'libs', include: '*.jar')
+    compile project(':plugins:Android-PullToRefresh:library')
+    compile project(':plugins:ckChangeLog:library')
+    compile project(':plugins:HoloColorPicker')
+    compile project(':plugins:openpgp-api-library')
+    compile 'com.android.support:support-v13:19.1.0'
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
-
 android {
-  compileSdkVersion 19
-  buildToolsVersion '20.0.0'
+    compileSdkVersion 23
+    buildToolsVersion '21.1.2'
 
-  sourceSets {
-    main {
-      manifest.srcFile 'AndroidManifest.xml'
-      java.srcDirs = ['src']
-      res.srcDirs = ['res']
-      assets.srcDirs = ['assets']
+    sourceSets {
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs = ['src']
+            res.srcDirs = ['res']
+            assets.srcDirs = ['assets']
+        }
+
+        androidTest {
+            manifest.srcFile 'tests/AndroidManifest.xml'
+            java.srcDirs = ['tests/src']
+            assets.srcDirs = ['tests/assets']
+        }
     }
 
-    androidTest {
-      manifest.srcFile 'tests/AndroidManifest.xml'
-      java.srcDirs = ['tests/src']
-      assets.srcDirs = ['tests/assets']
+    // Do not abort build if lint finds errors
+    lintOptions {
+        abortOnError false
     }
-  }
-  
 
-  // Do not abort build if lint finds errors
-  lintOptions {
-    abortOnError false
-  }
-
-  packagingOptions {
-    exclude 'META-INF/DEPENDENCIES'
-    exclude 'META-INF/LICENSE'
-    exclude 'META-INF/NOTICE'
-  }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
+    }
+    useLibrary 'org.apache.http.legacy'
 }
-
-task testsOnJVM(type :GradleBuild, dependsOn: assemble) {
-  buildFile = 'tests-on-jvm/build.gradle'
-  tasks = ['test']
+task testsOnJVM(type: GradleBuild, dependsOn: assemble) {
+    buildFile = 'tests-on-jvm/build.gradle'
+    tasks = ['test']
+}
+repositories {
+    jcenter()
 }
